--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta id="meta-description" name="description" content="" >
     
     <link rel="icon" type="image/x-icon" href="undefined" />
-    <link rel="stylesheet" href="./main-m0piwqpd.css" />
+    <link rel="stylesheet" href="main-m0piwqpd.css" />
     <style data-styled="ivoOXx sVsly cOKCgB  boKZAu jHCZrL kJMeqa iZASuI ehtzge bxeGYB eTcvjB hfxmui gUKUXM faaokq cbbBlW BpDkX hApwOg cUsEs icbRkp fWQyYs klOQRe eIWkuF idQtPS eJKNrI cSXxam jAxrJ cxWcpX hhzjlk giHXFP  itzSYI isaKnF jhzTfT dUzUSo biUYzV bkhROS coflSe fyaaUx bNqWac gQFxbz ldosOf PXsbt kQYZTL ZpFKr boOCvZ ipIQHx daBqjg kBZZnR YSXlM hPaLKo kKAajX hLHZHk ENblb jeUGdq  eZKSRg fegtTk kQnXzL lgkmef iCdLMd evhrik jywNoc kchUpy hLSuSV cABiyg iTwOXf epUMNC gwMSwQ bVEqvI dhMfxc iOJLTM kqDpkr fvenzf ghwqAa hUYWvT enjaDz dXYeBk bdivov hKBCfs cwWBOh jhArze ineHXG goUXAt" data-styled-version="4.3.2">
 /* sc-component-id: sc-1vrgkll-0 */
 .ivoOXx{position:fixed;z-index:19;right:20px;top:auto;bottom:0;-webkit-transform:none;-ms-transform:none;transform:none;margin-bottom:20px;}
