--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta id="meta-description" name="description" content="" >
     
     <link rel="icon" type="image/x-icon" href="undefined" />
-    <link rel="stylesheet" href="main-m0piwqpd.css" />
+    <link rel="stylesheet" href=".main-m0piwqpd.css" />
     <style data-styled="ivoOXx sVsly cOKCgB  boKZAu jHCZrL kJMeqa iZASuI ehtzge bxeGYB eTcvjB hfxmui gUKUXM faaokq cbbBlW BpDkX hApwOg cUsEs icbRkp fWQyYs klOQRe eIWkuF idQtPS eJKNrI cSXxam jAxrJ cxWcpX hhzjlk giHXFP  itzSYI isaKnF jhzTfT dUzUSo biUYzV bkhROS coflSe fyaaUx bNqWac gQFxbz ldosOf PXsbt kQYZTL ZpFKr boOCvZ ipIQHx daBqjg kBZZnR YSXlM hPaLKo kKAajX hLHZHk ENblb jeUGdq  eZKSRg fegtTk kQnXzL lgkmef iCdLMd evhrik jywNoc kchUpy hLSuSV cABiyg iTwOXf epUMNC gwMSwQ bVEqvI dhMfxc iOJLTM kqDpkr fvenzf ghwqAa hUYWvT enjaDz dXYeBk bdivov hKBCfs cwWBOh jhArze ineHXG goUXAt" data-styled-version="4.3.2">
 /* sc-component-id: sc-1vrgkll-0 */
 .ivoOXx{position:fixed;z-index:19;right:20px;top:auto;bottom:0;-webkit-transform:none;-ms-transform:none;transform:none;margin-bottom:20px;}
@@ -173,9 +173,9 @@
 .hijxOr{height:0px;visibility:hidden;overflow:hidden;} .hijxOr *{height:0;}</style>
     <link
       rel="stylesheet"
-      href="/rf_fonts/v1/fonts.css"
+      href="fonts.css"
     />
-    <script src="./builtIcons-m0piwqpd.js" async></script>
+    <script src=".builtIcons-m0piwqpd.js" async></script>
     
   </head>
   <body>
@@ -195,7 +195,7 @@
 </p><a href="tel:646-675-5974" class="WM_GLOBAL_paragraph14 sc-241bld-7 hLSuSV">646-675-5974</a></div><div class="sc-241bld-3 iCdLMd"><div class="sc-241bld-8 evhrik"><div class="sc-241bld-9 jywNoc"></div></div><h2 class="sc-241bld-5 WM_GLOBAL_heading20 sm-word-wrap sc-15za8y8-0 hbPLHt">Location</h2><p class="sc-241bld-6 WM_GLOBAL_paragraph14 sm-word-wrap sc-15za8y8-0 fcEIaE">3961 Small Street, New York<br></p><p class="sc-241bld-6 WM_GLOBAL_paragraph14 sm-word-wrap sc-15za8y8-0 fcEIaE">United States</p></div><div class="sc-241bld-3 iCdLMd"><div class="sc-241bld-8 evhrik"><div class="sc-241bld-9 jywNoc"></div></div><h2 class="sc-241bld-5 WM_GLOBAL_heading20 sm-word-wrap sc-15za8y8-0 hbPLHt">Working hours</h2><p class="sc-241bld-6 WM_GLOBAL_paragraph14 sm-word-wrap sc-15za8y8-0 fcEIaE">Open: 12:00 pm</p><p class="sc-241bld-6 WM_GLOBAL_paragraph14 sm-word-wrap sc-15za8y8-0 fcEIaE">Closed: 22:00 pm</p></div></div></div></div></div></section><footer><div class="sc-1ly7lpo-0 boKZAu"><div id="comp-18d5e88ac52" class="sc-1ly7lpo-1 jHCZrL"></div><div id="comp-6" class="sc-1ly7lpo-1 jHCZrL"></div><div class="sc-1u9cce5-0 cABiyg"><div style="padding-top:0" class="sc-ewl9y2-0 klOQRe"><div class="sc-1u9cce5-2 iTwOXf"><div class="sc-1u9cce5-5 epUMNC"><label class="sc-1u9cce5-1 WM_GLOBAL_heading32 sm-word-wrap sc-15za8y8-0 rJPVj">Get our latest updates</label><div class="sc-1u9cce5-4 gwMSwQ"><div class="sc-1u9cce5-6 bVEqvI"><form><div class="wm-email-input-wrapper sc-elfgzc-6 dhMfxc"><input type="text" value="" placeholder="Enter your email" class="wm-email-input WM_GLOBAL_secondary-font sc-elfgzc-1 iOJLTM" aria-label="Email input"/></div><button class="WM_GLOBAL_secondary-font wm-email-btn sc-elfgzc-0 kqDpkr">Subscribe</button></form></div></div></div></div></div><div style="padding-top:0" class="sc-ewl9y2-0 klOQRe"><div class="sc-1u9cce5-3 fvenzf"><div class="socials-block sc-1y8vywq-0 ghwqAa"><div class="socials-wrapper sc-1y8vywq-1 hUYWvT"><div class="link-wrapper "><a aria-label="Social link" class=" link" target="_blank" rel="noopener noreferrer" href="https://www.facebook.com"></a></div><div class="link-wrapper "><a aria-label="Social link" class=" link" target="_blank" rel="noopener noreferrer" href="https://www.twitter.com"></a></div><div class="link-wrapper "><a aria-label="Social link" class=" link" target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com"></a></div><div class="link-wrapper "><a aria-label="Social link" class=" link" target="_blank" rel="noopener noreferrer" href="https://www.instagram.com"></a></div></div></div><div class="sc-1u9cce5-10 enjaDz"><p class="sc-1u9cce5-9 WM_GLOBAL_secondary-font sm-word-wrap sc-15za8y8-0 liYurw"><b>© All Rights Reserved. Deepfake detection</b>
 </p></div></div></div></div></div></footer></div><div class="sc-lvczw7-1 dXYeBk"><div class="sc-15u4boq-0 bdivov sc-ewl9y2-0 klOQRe"><div class="sc-15u4boq-4 hKBCfs"><div class="sc-15u4boq-5 cwWBOh"><img width="255px" height="60px" alt="Logo" src="https://static.rfstat.com/renderforest/images/website_maker_images/render-logo.svg"/></div><p class="sc-15u4boq-2 jhArze"><span class="sc-15u4boq-3 ineHXG">Disclaimer:</span> This website was built with Renderforest, however it is <span class="sc-15u4boq-3 ineHXG">NOT</span> managed by Renderforest.  If you find the content on this website abusive or inappropriate please report right away.</p></div><button type="primary" class="sc-15u4boq-6 goUXAt">Report</button></div></div></div>
     </div>
-    <script src="./bundle-m0piwqpd.js"></script>
+    <script src=".bundle-m0piwqpd.js"></script>
   </body>
 </html>
   
